// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TapStack Unit Tests Stack Configuration and Synthesis TapStack should instantiate with custom props 1`] = `
"{
  "data": {
    "aws_ami": {
      "AmzLinux2": {
        "filter": [
          {
            "name": "name",
            "values": [
              "amzn2-ami-hvm-*-x86_64-gp2"
            ]
          },
          {
            "name": "virtualization-type",
            "values": [
              "hvm"
            ]
          }
        ],
        "most_recent": true,
        "owners": [
          "amazon"
        ]
      }
    }
  },
  "output": {
    "Ec2InstanceId": {
      "description": "ID of the EC2 instance",
      "value": "mock-instance-id"
    },
    "PrivateSubnetId": {
      "description": "ID of the private subnet",
      "value": "mock-private-subnet-id"
    },
    "PublicSubnetId": {
      "description": "ID of the public subnet",
      "value": "mock-public-subnet-id"
    },
    "S3BucketName": {
      "description": "Name of the secure S3 bucket",
      "value": "mock-s3-bucket-name"
    },
    "VpcId": {
      "description": "ID of the provisioned VPC",
      "value": "mock-vpc-id"
    }
  },
  "provider": {
    "aws": [
      {
        "default_tags": [
          {
            "tags": {
              "Project": "TAP"
            }
          }
        ],
        "region": "us-west-2"
      }
    ]
  },
  "terraform": {
    "backend": {
      "s3": {
        "bucket": "my-custom-state-bucket",
        "encrypt": true,
        "key": "prod/TestCustomStack.tfstate",
        "region": "us-east-1",
        "use_lockfile": true
      }
    },
    "required_providers": {
      "aws": {
        "source": "aws",
        "version": "6.4.0"
      }
    }
  }
}"
`;

exports[`TapStack Unit Tests Stack Configuration and Synthesis TapStack should use default values when no props are provided 1`] = `
"{
  "data": {
    "aws_ami": {
      "AmzLinux2": {
        "filter": [
          {
            "name": "name",
            "values": [
              "amzn2-ami-hvm-*-x86_64-gp2"
            ]
          },
          {
            "name": "virtualization-type",
            "values": [
              "hvm"
            ]
          }
        ],
        "most_recent": true,
        "owners": [
          "amazon"
        ]
      }
    }
  },
  "output": {
    "Ec2InstanceId": {
      "description": "ID of the EC2 instance",
      "value": "mock-instance-id"
    },
    "PrivateSubnetId": {
      "description": "ID of the private subnet",
      "value": "mock-private-subnet-id"
    },
    "PublicSubnetId": {
      "description": "ID of the public subnet",
      "value": "mock-public-subnet-id"
    },
    "S3BucketName": {
      "description": "Name of the secure S3 bucket",
      "value": "mock-s3-bucket-name"
    },
    "VpcId": {
      "description": "ID of the provisioned VPC",
      "value": "mock-vpc-id"
    }
  },
  "provider": {
    "aws": [
      {
        "default_tags": [
        ],
        "region": "us-west-2"
      }
    ]
  },
  "terraform": {
    "backend": {
      "s3": {
        "bucket": "iac-rlhf-tf-states",
        "encrypt": true,
        "key": "dev/TestDefaultStack.tfstate",
        "region": "us-east-1",
        "use_lockfile": true
      }
    },
    "required_providers": {
      "aws": {
        "source": "aws",
        "version": "6.4.0"
      }
    }
  }
}"
`;
